Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -228,17 +228,17 @@ html {
 
 .teacher-body {
   display: flex;
-  padding: 1rem;
+  padding: 2rem;
   gap: 1rem;
   font-family: 'Lato';
 }
 
 .teacher-img-container {
-  width: 30rem;
+  width: 50vw;
 }
 
 .teacher-img {
-  width: 100%;
+  width: 80%;
 }
 
 .teacher-disc-body {
@@ -246,6 +246,7 @@ html {
   flex-direction: column;
   gap: 1rem;
   padding: 1rem 0;
+  flex: 1;
 }
 
 .teacher-title {
@@ -412,10 +413,11 @@ html {
 .teachers-container {
   flex-direction: row;
   justify-content: center;
+  padding: 1rem 5rem;
 }
 
 .teacher-img-container {
-  width: 40vw;
+  width: 15vw;
 }
 
 .footer {
@@ -511,7 +513,12 @@ html {
 }
 .teachers-container {
   flex-direction: column;
-  width: 50rem;
+}
+
+.teacher1, .teacher2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 }
